# Dialektor

./: README.md  docker-compose.yml  openapi.yaml
dialektor-backend/: .gitignore  Dockerfile  albaniaMuncipalities.csv  pyproject.toml  requirements.txt  serverless.yml
dialektor-backend/db/: Dockerfile  db.sql  populateCountries.py  populateCountryData.sql
dialektor-backend/src/: server.py
dialektor-backend/src/baseWords/: __init__.py  baseWordDIs.py  baseWordEndpoints.py
dialektor-backend/src/common/: __init__.py  database.py  versionDIs.py
dialektor-backend/src/countries/: __init__.py  countryDIs.py  countryEndpoints.py
dialektor-backend/src/dialects/: __init__.py  dialectDIs.py  dialectEndpoints.py
dialektor-backend/src/languageToCountries/: __init__.py  languageToCountryDIs.py  languageToCountryEndpoints.py
dialektor-backend/src/languages/: __init__.py  languageDIs.py  languageEndpoints.py
dialektor-backend/src/regions/: __init__.py  regionDIs.py  regionEndpoints.py
dialektor-backend/src/requestedWords/: __init__.py  requestedWordDIs.py  requestedWordEndpoints.py
dialektor-backend/src/scripts/: __init__.py  scriptDIs.py  scriptEndpoints.py
dialektor-backend/src/sessionTokens/: __init__.py  sessionTokenDIs.py  sessionTokenEndpoints.py
dialektor-backend/src/users/: __init__.py  userDIs.py  userEndpoints.py
dialektor-backend/src/wordVariants/: __init__.py  wordVariantDIs.py  wordVariantEndpoints.py
dialektor-backend/test/: common.py  conftest.py  generators.py  test_version.py
dialektor-backend/test/baseWords/: test_createBaseWord.py  (+3 more)
(+60 files in other folders)
