[project]
name = "dialektor-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "AdemOdza",email = "AdemOdza@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask (>=3.1.0,<4.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "psycopg[binary,pool] (>=3.2.9,<4.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "werkzeug (>=3.1.3,<4.0.0)"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"
